# iw-coding-challenges

./: .gitignore
01-smallest-change/: Main.hs  Simple.hs
02-the-greedy-thief/: examples.txt  main.cpp  memoized.txt  non-memoized.txt  other.cpp  random  random.cpp  random1000.json  random1000.txt  random200.json  random200.json.old  random200.txt
03-spell-checker/: Cargo.toml  lukes.txt  mine.txt  words.diff
03-spell-checker/src/: main.rs
04-local-chat/: chat  chat.c  chatv2.bash  mmap_demo  mmap_demo.c  recording.flv  recurse  recurse.c
06-cyclic-dependencies/: Cargo.toml  Main.hs  main.c
06-cyclic-dependencies/cyclic-dependencies-hs/: LICENSE  README.md  cyclic-dependencies-hs.cabal
06-cyclic-dependencies/cyclic-dependencies-hs/src/: Main.hs
06-cyclic-dependencies/src/: main.rs
07-months-in-year/: main.c
christmas-challenge/: Cargo.toml  best_window.txt  cities500_small.csv  example.txt  out2.txt  output.txt
christmas-challenge/src/: graph.rs  main.rs
