name:                cyclic-dependencies-hs
version:             0.1.0.0

homepage:            https://github.com/djrollins/cyclic-dependencies-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel J Rollins`
maintainer:          daniel@djrollins.com
copyright:           MIT
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cyclic-dependencies-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       mtl
